--- a/server/package.json
+++ b/server/package.json
@@ -2,21 +2,28 @@
   "name": "test",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "ansi-regex": "^6.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "colors": "^1.4.0",
     "dotenv": "^8.1.0",
     "ejs": "^3.1.8",
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
     "i18n": "^0.8.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^8.1.3",
     "node-fetch": "^2.6.1",
-    "path": "^0.12.7"
+    "nodemon": "^2.0.7",
+    "path": "^0.12.7",
+    "socket.io": "^4.1.2"
   }
 }
