--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "ejs": "^3.1.8",
     "express": "^4.17.1",
